sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:12: error: not found: value bougerTrou
        bougerTrou(B)
        ^